--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -79,6 +79,7 @@ jobs:
 
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
+        run: exit 1
 
       - name: Terraform Apply
         if: github.event_name == 'push'
