[OlGo] github actions fixed

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -49,7 +49,7 @@ jobs:
         continue-on-error: true
 
       - uses: actions/github-script@v6
-        if: github.event_name == 'push'
+        if: github.event_name == 'pull_request'
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
