--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'push'
-        run: terraform -var tfc_token="" -chdir=$TF_WORKING_DIR plan -no-color -input=false
+        run: terraform -chdir=$TF_WORKING_DIR -var tfc_token="" plan -no-color -input=false
         continue-on-error: true
 
       - uses: actions/github-script@v6
