--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -109,10 +109,10 @@ jobs:
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
-      - name: Terraform Apply
-        if: github.event_name == 'push'
-        run: terraform -chdir=./examples apply -var 'tfc_token=""' -auto-approve -input=false
+      # - name: Terraform Apply
+      #   if: github.event_name == 'push'
+      #   run: terraform -chdir=./examples apply -var 'tfc_token=""' -auto-approve -input=false
 
-      - name: Terraform Destroy
-        if: github.event_name == 'push'
-        run: terraform -chdir=./examples destroy -var 'tfc_token=""' -auto-approve -input=false
+      # - name: Terraform Destroy
+      #   if: github.event_name == 'push'
+      #   run: terraform -chdir=./examples destroy -var 'tfc_token=""' -auto-approve -input=false
